@@ -547,7 +547,7 @@ This function will need to temporarily lock the surface.
 
 <a name=set_clip><font size=+2><b>set_clip
 </b></font><br><font size=+1><tt>
-Surface.set_clip([rectstyle])) -> None
+Surface.set_clip([rectstyle]) -> None
 </tt></font><ul>
 Assigns the destination clipping rectangle for the Surface. When
 blit or fill operations are performed on the Surface, they are
